[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>8.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "burstH2MM"
dynamic = ["version", ]
authors = [{name="Paul David Harris", email="paul.harris@mail.huji.ac.il"}, ]
description = "API for using H2MM_C with FRETBursts"
readme = "README.md"
license = {file="LICENSE.txt"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research"
 ]
requires-python = ">= 3.8"
dependencies = [
    "numpy",
    "matplotlib>=3.0.1",
    "IPython", 
    "seaborn>=0.11.1",
    "fretbursts",
    "h2mm-c>=1.0.3",
]

[project.urls]
Homepage = "https://github.com/harripd/burstH2MM"
Documentation = "https://burstH2MM.readthedocs.io"
Issues = "https://github.com/harripd/burstH2MM/issues"
Repository = "https://github.com/harripd/burstH2MM"

[tool.setuptools.packages.find]
include = ['burstH2MM*']

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.pytest.ini_options]
