[metadata]
name = burstH2MM
version = 0.1.7
author = Paul David Harris
author_email = paul.harris@mail.huji.ac.il
description = API for using H2MM_C with FRETBursts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/harripd/burstH2MM
project_urls =
    Bug Tracker = https://github.com/harripd/burstH2MM
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
install_requires = 
    numpy >=1.20.1
    pandas

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    numpy >=1.20.1
    pandas
